[package]
name = "file-utils"
version = "0.1.5"
authors = ["G. Mantaos <gmantaos@gmail.com>"]

description = "Convenience wrappers for file I/O, mostly around binary operations."

documentation = "https://github.com/gmantaos/file-utils"
homepage = "https://github.com/gmantaos/file-utils"
repository = "https://github.com/gmantaos/file-utils"
readme = "README.md"
license-file = "LICENSE"

keywords = ["file", "binary", "native", "read", "write"]
categories = ["encoding", "embedded", "filesystem", "parsing"]

